// Copyright 2015 gRPC authors.
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

option go_package = "google.golang.org/grpc/webservices-go/grpc";
option java_multiple_files = true;
option java_package = "io.grpc.examples.helloworld";
option java_outer_classname = "BookProto";

package book;

// The greeting service definition.
service Book {
  // Sends a greeting
  rpc GetBook (BookParams) returns (BookResponse) {}

  rpc SearchBooks (BookParams) returns (BookResponse) {}

  rpc CreateBook (BookRequest) returns (BookResponse) {}
  
}

// The request message containing the user's name.
message BookParams {
  string keyword = 1;
}

// The response message containing the greetings
message BookResponse {
  string message = 1;
}

message BookRequest {
  string title = 1;
  string author = 2;
  int32 pages = 3;
  int32 quantity = 4;
}

